# projet-c

CRUD/: liste.c  liste.h  liste.txt  main.c  makefile  prog
Glade/: project-c.glade
Glade2022/: project-c.glade.bak  project-c.gladep.bak
Glade_Manel/: Makefile  config.status  configure  project-c.glade
Glade_Manel version integration/: Makefile  Makefile.in  config.h  config.status  project-c.glade.bak  projectel.glade.bak  projectel.gladep
Glade_Manel version integration/autom4te.cache/: output.1  requests  traces.1
Glade_Manel version integration/po/: Makefile.in
Glade_Manel version integration/src/: Makefile.in  callbacks.h  interface.c  interface.h  project-c
Glade_Manel/po/: Makefile
Glade_Manel/src/: Makefile  Makefile.am  Makefile.in  callbacks.c  callbacks.h  election.c  election.h  election.txt  interface.c  interface.c.bak  main.c  project-c
Glade_Manel/src/.deps/: callbacks.Po  election.Po
Glade_final/: project-c.glade.bak
Glade_ines/: Makefile.am  configure.in  project-c.glade.bak
Glade_ines2/: project-c.glade.bak
Gladebaha/: project-c.glade
PROJETC/: projet-c.glade.bak  projet-c.gladep.bak
bureau_vote/: bureaudevote.c  bureaudevote.h  bureaudevote.txt  entite.c  filename.txt  main.c  mainn.c
crud_obs/: fichier.txt  makefile  obmain.c  obs.c  obs.h  prog
crud_user/: fichier.c  fichier.h  fichier.txt  makefile  umain.c
election/: ajout.c  ajout.h  election.c  election.h  election.h.gch  election.txt  main.c  makefile  prog
src/: Makefile  bureaudevote.c  bureaudevote.h  callbacks.c  fileBureau.txt  interface.c.bak  main.c
(+13 files in other folders)
